@@ -1,3 +1,8 @@
+2007-12-20  Ankit Jain  <jankit@novell.com>
+
+	* MakefileGeneratorTool.cs: Use GettextCatalog.GetString for
+	user-visible strings.
+
 2007-12-18  Ankit Jain  <jankit@novell.com>
 
 	Fix bug #349419
